# Anil-Kushwaha-Manufac-fast-api

./: Dockerfile  README.md  pyproject.toml
app/: config.py  data_loader.py  main.py  models.py  routes.py
